Fixed experience alignment

--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -68,9 +68,10 @@
 .section {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 5vw;
+    width: 100%;
 }
 
 #experienceUL {
